<resources>
    <string name="app_name">MyForecastWeather</string>
    <string name="current">Current</string>
    <string name="wind_kph">wind_kph</string>
    <string name="city">City</string>
    <string name="pressure_mb">pressure_mb</string>
    <string name="precip_mm">precip_mm</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="gust_kph">gust_kph</string>
    <string name="condition_text">condition_text</string>
    <string name="temp_c">temp_c</string>
    <string name="last_update">last_update</string>
    <string name="todo">TODO</string>
    <string name="day_name">Day Name</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="time">Time</string>
    <string name="chance_rain">Chance Rain</string>
    <string name="will_rain">Will Rain</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="precipation">Precipation</string>
    <string name="gust">Gust</string>
    <string name="feelslike">Feelslike</string>
    <string name="date">Date</string>
    <string name="co">CO</string>
    <string name="no2">NO<sub>2</sub></string>
    <string name="so2">SO<sub>2</sub></string>
    <string name="pm2_5">pm2.5</string>
    <string name="pm10">pm10</string>
    <string name="o3">O<sub>3</sub></string>
    <string name="aqi_message">Aqi Message</string>
    <string name="loading">Loading</string>
    <string name="code">Code</string>
    <string name="error">Error</string>
    <string name="message">Message</string>
    <string name="error_code">Error Code</string>
    <string name="based_aqi">Based on US - EPA standard.</string>
    <string name="aqi">Air Quality Index</string>
</resources>